<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="web_client_id" translatable="false">BuildConfig.WEB_CLIENT_ID</string>
    <string name="app_name" translatable="false">Movie Buzz</string>
    <string name="action_settings">Settings</string>
    <string name="poster_card_width" translatable="false">185dp</string>
    <string name="poster_card_height" translatable="false">275dp</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="search_hint">Search Movies By Title</string>
    <string name="posterGridDrawer_close" translatable="false">Drawer Closed</string>
    <string name="posterGridDrawer_open" translatable="false">Drawer Opened</string>
    <string name="title_activity_display_expanded_movie_data" translatable="false">DisplayExpandedMovieData</string>
    <string name="intent_movie_data_key" translatable="false">
        INTENT_MOVIE_DATA_ARRAY_LIST
    </string>
    <string name="max_rating_with_slash" translatable="false">/10</string>
    <string name="sample_movie_detail_overview">Noble is a man who lives alone in a rundown hotel room. Lately, someone has been sliding notes under his door, telling him to do things. He has dreams of a white mask lying on the ground. And two detectives have been harassing him, trying to find a missing woman. One day, a mysterious visitor arrives and tells Noble that he can find the truth if he wants. He sets Noble on a mission...find the woman and he will have his answers. Noble agrees, and sets off to uncover the mystery that leads him to places he never wanted to go.</string>
    <string name="popularity_movie_detail_description">Popularity</string>
    <string name="string_format_average_voting" translatable="false">%.2f</string>
    <string name="string_format_popularity" translatable="false">%.6f</string>
    <string name="sort_popularity_desc_menu">Sort By Highest Popularity Descending</string>
    <string name="sort_rating_desc_menu">Sort By Highest Rating Descending</string>
    <string name="display_most_popular_movies_snackBar_message">Displaying Most Popular Movies First</string>
    <string name="display_highest_rated_movies_snackBar_message">Displaying Highest Rated Movies First</string>
    <string name="sort_options_list_preference_default_value" translatable="false">popularity.desc</string>
    <string name="sort_options_list_key" translatable="false">sort_preference</string>
    <string name="sort_options_list_title">Sort options</string>
    <string name="data_sync_options_preference_category_title">Data Sync Options</string>
    <string-array name="sort_options_list_entries">
        <item>Highest Rated Movies First</item>
        <item>Most Popular Movies First</item>
    </string-array>
    <string-array name="sort_options_list_values">
        <item>vote_average.desc</item>
        <item>popularity.desc</item>
    </string-array>
    <string-array name="preferred_language_entries" translatable="false">
        <item>English</item>
        
        <item>French</item>
        <item>Greek</item>
        
    </string-array>
    <string-array name="preferred_language_values" translatable="false">
        <item>en</item>
        
        <item>fr</item>
        <item>el</item>
        
    </string-array>
    <string name="title_activity_movie_poster_grid" translatable="false">MoviePosterGridActivity</string>
    <string name="title_activity_display_detailed_movie_data" translatable="false">DisplayDetailedMovieData</string>
    <string name="title_activity_movie_tabs_detail" translatable="false">MovieTabsDetailActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="favourites_checkbox_preference_key" translatable="false">favouritesDisplayPreferenceKey</string>
    <string name="favourites_checkBox_title">Display Only FavouredMovies</string>
    <string name="default_favourites_checkBox_preferece_value">false</string>
    <string name="poster_storage_checkbox_preference_key" translatable="false">imageStoragePreferenceKey</string>
    <string name="poster_storage_preference_title">Store Only Favoured Movie Images</string>
    <string name="poster_storage_favoured_store_summary">Favoured Movie posters will be available offline</string>
    <string name="poster_storage_all_movies_store_summary">All Movie posters will be available offline\nWarning : Consumes More Data</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="highest_rated_movies_nav_title">Highest Rated Movies</string>
    <string name="most_popular_movies_nav_title">Most Popular Movies</string>
    <string name="upcoming_movies_nav_title">UpComing Movies</string>
    <string name="playing_now_nav_title">Playing Now</string>
    <string name="favourites_nav_title">Favourites</string>
    <string name="settings_nav_title">Settings</string>
    <string name="popular_cast_crew_nav_title">Popular Cast/Crew</string>
    <string name="title_biography">Biography</string>
    <string name="age_27_sample">Age : 27</string>
    <string name="birthday_sample_string">Birthday : 2nd May 1972</string>
    <string name="person_name_sample_string">Person Name</string>
    <string name="place_of_birth_sample_string">Place of Birth</string>
    <string name="movie_title_desc_string">Movie Title</string>
    <string name="accessibility_poster_desc">Movie Poster</string>
    <string name="accessibility_release_date_desc">Release Date</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="please_sign_in_with_google_message">Please Sign In with Google</string>
    <string name="skip_string">Skip</string>
    <string name="to_watch_list_string">To Watch</string>
    <string name="watched_list_string">Watched List</string>
    <string name="moviebuzz_reviews_string">MovieBuzz Reviews</string>
    <string name="seeds_default_value">0</string>
    <string name="_0mb">0MB</string>
</resources>