<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/movieTypeNavGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/highestRatedMoviesNavMenu"
            android:icon="@drawable/ic_stars_black_48dp"
            android:title="@string/highest_rated_movies_nav_title" />
        <item
            android:id="@+id/mostPopularMoviesNavMenu"
            android:icon="@drawable/ic_favorite_black_48dp"
            android:title="@string/most_popular_movies_nav_title" />
        <item
            android:id="@+id/upComingMoviesNavMenu"
            android:icon="@drawable/ic_av_timer_black_48dp"
            android:title="@string/upcoming_movies_nav_title" />
        <item
            android:id="@+id/nowPlayingMoviesNavMenu"
            android:icon="@drawable/ic_play_circle_outline_black_48dp"
            android:title="@string/playing_now_nav_title" />
        <item
            android:id="@+id/favouriteMoviesNavMenu"
            android:icon="@drawable/ic_star_black_48dp"
            android:title="@string/favourites_nav_title" />
        <item
            android:id="@+id/settingsNavMenu"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/settings_nav_title"
            android:visible="false" />
        <item
            android:id="@+id/popularPeopleNavMenu"
            android:icon="@drawable/ic_people_black_48dp"
            android:title="@string/popular_cast_crew_nav_title" />
    </group>
    <group
        android:id="@+id/personalizationNavGroup">
        <item
            android:id="@+id/toWatchNavMenu"
            android:icon="@drawable/ic_playlist_add_black_36dp"
            android:title="@string/to_watch_list_string" />
        <item
            android:id="@+id/watchedNavMenu"
            android:icon="@drawable/ic_playlist_add_check_black_36dp"
            android:title="@string/watched_list_string" />
        <item
            android:id="@+id/movieBuzzReviewsNavMenu"
            android:icon="@drawable/ic_mode_edit_black_48dp"
            android:title="@string/moviebuzz_reviews_string" />
    </group>
</menu>