<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_overlapTop="100dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sreesha.android.moviebuzz.MovieDataRenderingClasses.PeopleDisplay.PeopleProfileFragment"
    tools:showIn="@layout/fragment_people_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.v7.widget.CardView
            android:id="@+id/bioDataCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/personNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/person_name_sample_string"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/personNameTextView"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/age_27_sample"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/birthdayTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ageTextView"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/birthday_sample_string"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/placeOfBirthTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/birthdayTextView"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/place_of_birth_sample_string"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bioDataCardView"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/title_biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:padding="5dp"
                    android:text="@string/title_biography"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/biographyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_biography"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/large_text" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
