<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/posterCardView"
        android:layout_width="@dimen/movie_poster_phone_width"
        android:layout_height="@dimen/movie_poster_phone_height"
        android:layout_marginLeft="@dimen/movie_poster_margin"
        android:layout_marginRight="@dimen/movie_poster_margin"
        android:layout_marginTop="@dimen/movie_poster_margin"
        android:clickable="true"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/md_grey_700">
        <ImageView
            android:contentDescription="@string/accessibility_poster_desc"
                android:id="@+id/moviePosterImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/movieDetailCard"
        android:layout_width="@dimen/movie_poster_phone_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/posterCardView"
        android:layout_marginLeft="@dimen/movie_poster_margin"
        android:layout_marginRight="@dimen/movie_poster_margin"
        android:layout_marginBottom="@dimen/movie_poster_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/originalTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/movie_title_desc_string"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/ratingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/originalTitleTextView"
                android:gravity="center"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBarIndicator"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="1" />

                <ImageView
                    android:id="@+id/calendarImageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/accessibility_release_date_desc"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ratingBarIndicator"
                    android:layout_toEndOf="@+id/ratingBarIndicator"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:tint="@color/blue_grey_900" />

                <TextView
                    android:id="@+id/releaseDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/calendarImageView"
                    android:text="@string/accessibility_release_date_desc"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>